cmake_minimum_required(VERSION 3.27)
project(PathTracer)

set(CMAKE_CXX_STANDARD 20)

add_executable(PathTracer src/main.cpp)

include(FetchContent)
FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)


enable_testing()

add_executable(
        tst_file
        ./test/testing.cpp
)
target_link_libraries(
        tst_file
        GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(tst_file)